# Keystone

./: .gitignore  README.md  keystone.csv  keystoness.csv  main.py  non_zero_keystone.npy  notebook.ipynb  pyproject.toml  simple_net.pt  simple_net_loss.pt  testing.py
data/DKI_data/: keystoness.csv  keystoness_species.csv
keystone/: data_loading.py  keystone.py  model.py
loss/: DKI_data_MSELoss_loss.pt  DKI_data_NLLoss_loss.pt  DKI_data_loss.pt  EU_data_loss.pt
models/: DKI_data_MSELoss_net.pt  DKI_data_NLLoss_net.pt  DKI_data_net.pt
results/: keystoness.csv
