[tool.poetry]
name = "keystone"
version = "0.1.0"
description = ""
authors = ["rkdan <rkd43@cam.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.2.0"
numpy = "^1.26.3"
matplotlib = "^3.8.2"
scikit-learn = "^1.4.0"
tqdm = "^4.66.1"
seaborn = "^0.13.2"
networkx = "^3.2.1"
pandas = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
